# Streaming

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  spack.yaml
app/: BUILD  app.cc  app_io.proto  cli.cc
app/algorithms/: BUILD  algorithm_impl.cc  algorithm_impl.h  streaming_algorithm_impl.h
app/algorithms/streaming/matching/: BUILD  greedy.cc
ds/: BUILD
ds/streaming/: BUILD  hypergraph.h  matching.h
io/: BUILD  hgr_reader.h  hgr_reader_test.cc
runner/: BUILD  counting_allocators.cc  counting_allocators.h  fork_runner.cc  generate_experiment_config.cc  humanize.cc  hypergraph_storage_system.cc  hypergraph_storage_system.h  make_uniform_negative.cc
tools/plot/: BUILD  dataloader.cc  dataloader.h  gaussian_error.h  pivot_table.h  plot.cc  plot.h
utils/: BUILD  logging.h  random.h  range.h  systeminfo.cc  systeminfo.h
utils/workspace/: BUILD.matplotlibcpp17  BUILD.spack_python
